--- a/Visualization-Part1.ipynb
+++ b/Visualization-Part1.ipynb
@@ -67,7 +67,10 @@
     " \n",
     "# plot\n",
     "plt.plot( 'x', 'y', data=df, linestyle='none', marker='>',markerfacecolor='orange', markersize=10, markeredgecolor=\"black\")\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# TODO: remove warnings"
    ]
   },
   {
