--- a/Visualization-Part1.ipynb
+++ b/Visualization-Part1.ipynb
@@ -104,7 +104,9 @@
     " \n",
     "# Annotation\n",
     "plt.text(40, 00, r'equation: $\\sum_{i=0}^\\infty x_i$', fontsize=20)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# TODO: remove warnings "
    ]
   },
   {
@@ -144,7 +146,10 @@
     "# Custom arrow\n",
     "arrowprops=dict(facecolor='black', shrink=0.05)\n",
     ")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# TODO: remove warnings "
    ]
   },
   {
@@ -179,7 +184,9 @@
     "# Annotation\n",
     "plt.axvline(40, color='r')\n",
     "plt.axhline(40, color='green')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# TODO: remove warnings"
    ]
   },
   {
@@ -266,7 +273,9 @@
    ],
    "source": [
     "plt.plot( 'x', 'y', data=df, linestyle='-', marker='o')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# TODO: remove \n"
    ]
   },
   {
@@ -297,7 +306,10 @@
    ],
    "source": [
     "plt.plot( 'x', 'y', data=df, linestyle='-')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# TODO: remove warnings "
    ]
   },
   {
@@ -989,7 +1001,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": false
+   "window_display": true
   }
  },
  "nbformat": 4,
